# BP-Judger

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: app.controller.ts  app.init.ts  app.module.ts  app.service.ts  main.ts  utils.ts
src/configs/: config.example.ts  g++.ts  g++2.ts  netns.nsjail.sh
src/configs/cmakes/cpp_bot_use_template/: CMakeLists.txt  common.cmake
src/configs/predefined/: cmake_g++_c++14_grpc_player_compile.toml  g++_c++11_compile_and_run.json
src/configs/procedures/: c++14_grpc_player_compile.json  filecache_set.json  run_exec.json
src/dummy/: memory-dummy  memory-dummy.cpp
src/executables/: executables.ts
src/facade/: GameBuilder.ts  GameRuleBuilder.ts  PlayerBuilder.ts
src/game/: compile.test.ts  game.test.ts  game.ts
src/game/gamerules/: GameRuleBase.ts  GameRuleFactory.ts  GameRuleProxyManager.ts  IGame.ts  IGameRule.ts
src/game/gamerules/GuessNumber/: BinarySearchBot.ts  GuessNumberGame.ts
src/game/gamerules/GuessNumber/bot_template/: GuessNumber.template.ts
src/game/gamerules/GuessNumber/bot_template/cpp/: bot.h  player_proxy_client.h
src/game/gamerules/GuessNumber/bots/: BinarySearchBot.ts  BinarySearchBotUseTemplate.ts  Noob.ts
src/game/gamerules/GuessNumber/bots/cpp/: cppbot.cc
src/game/gamerules/GuessNumber/bots/cpp/bot2/: cppBotUseTemplate.cc
src/game/gamerules/GuessNumber/bots/ts/: BinarySearchBot.ts  BinarySearchBotUseTemplate.ts  Noob.ts
src/game/gamerules/gameruleProxy/: GameRuleProxy.ts  GameRuleProxy2.ts  RG.ts  gamerule.test.ts  gamerule2.test.ts  gameruleProxy.ts
src/game/gamerules/gameruleProxy/grpc/: gamerule.io.ts  gamerule.proto  jsonmsg.proto
src/game/gamerules/gameruleProxy/grpc/ts/: gamerule.ts  jsonmsg.ts
src/game/gamerules/gameruleProxy/rg-grpc/: gamerule.io.ts
src/game/gamerules/grpc/: player.proto
src/game/gamerules/grpc/cpp/: CMakeLists.txt  cppbot.cc  gamer-proxy.grpc.pb.cc  gamer-proxy.grpc.pb.h  gamer-proxy.pb.cc  gamer-proxy.pb.h  player.grpc.pb.cc  player.grpc.pb.h
src/game/gamerules/grpc/typescript/google/protobuf/: struct.ts
src/game/gamerules/local/GuessNumber/: GuessNumberGame.ts
src/game/gamerules/local/GuessNumber/bot_template/: GuessNumber.template.ts
src/game/gamerules/local/GuessNumber/bot_template/cpp/: player_proxy_client.h
src/game/gamerules/local/GuessNumber/bots/cpp/: CMakeLists.txt  cppbot.cc
src/game/gamerules/local/GuessNumber/bots/cpp/bot2/: CMakeLists.txt  cppBotUseTemplate.cc
src/game/gamerules/local/GuessNumber/bots/ts/: BinarySearchBot.test.ts  BinarySearchBotUseTemplate.test.ts  Noob.ts
src/game/players/: IPlayer.ts  PlayerBase.ts  PlayerFactory.ts  player1.ts  playerProxy.ts
src/game/players/playerProxy/: playerProxy.ts
src/game/players/playerProxy/grpc/cpp/: player.pb.cc  player.pb.h
src/game/players/playerProxy/grpc/typescript/: gamer-proxy_grpc_pb.js
src/global/: filters.ts
src/jail/: NsjailRush.ts
src/jail/jailmount/: test.cpp
src/modules/bot/: bot.controller.ts  bot.module.ts  bot.service.ts
src/modules/bot/dto/: create-bot.dto.ts
src/modules/bot/entities/: bot.entity.ts
src/modules/game/: game.consumer.ts  game.controller.ts  game.module.ts  game.service.ts
src/modules/game/dto/: create-game.dto.ts  update-game.dto.ts
src/modules/game/entities/: game.entity.ts  gameFacade.entity.ts  gameover.entity.ts
src/modules/gamerule/: gamerule.controller.ts  gamerule.module.ts  gamerule.service.ts
src/modules/gamerule/dto/: create-gamerule.dto.ts  update-gamerule.dto.ts
src/modules/gamerule/entities/: gamerule.entity.ts  gameruleFacade.entity.ts
src/modules/player/: player.controller.ts  player.module.ts  player.service.ts
src/modules/player/entities/: player.entity.ts  playerFacade.entity.ts
src/pipelining/: pipelining.decl.ts  pipelining.ts
src/pipelining/executors/: commandExecutor.ts
src/pipelining/modules/: IModule.ts  testModules.ts
src/pipelining/modules/CompileModule/: compileModule.ts
src/pipelining/modules/FileCacheModule/: LRU.cache.ts  fileCacheModule.ts
src/pipelining/modules/GameModule/: gameModule.ts
src/pipelining/modules/playerModule/: player.ts  playerModule.ts
src/pipelining/modules/testModules/: POSTModule.ts
src/sandbox-test/: dockerArgsComposer.ts  nsjailRush.ts  test.main.ts  testdocker.ts
src/sandbox-test/compile/: compile.test.ts  utils.ts
src/sandbox-test/compile/configs/: g++.ts
src/sandbox-test/compile/executor/: commandExecutor.ts
src/sandbox-test/compile/game/: game.ts
src/sandbox-test/compile/jobs/: pipelining.ts
src/sandbox-test/compile/modules/playerModule/: player.ts  playerModule.ts
src/sandbox-test/compile/test-games/: IGame.ts  gamer1.ts  player1.ts  playerProxy.ts  test-grpc-client.ts  testGame.ts
src/sandbox-test/compile/test-games/grpc/: gamer-proxy.ts  gamer-proxy_pb.js
src/sandbox-test/compile/test-games/grpc/google/protobuf/: struct.ts
src/sandbox-test/dummy/: calc-dummy  calc-dummy.cc  memory-dummy2.cpp
src/sandbox-test/jail-mount/: helloworld.out  memory-dummy-2
src/utils/: timely.ts
